# v-tokenizers

./: .gitignore  Cargo.toml  README.md  v10c-SPEC.md
.github/workflows/: ci.yml  publish.yml
bench/: g1_selection.py  test_g1_selection.py  tokenizer_bench.py
bench/msi/: canonicalizer.py  frame_battery.jsonl  parity_vectors.jsonl  test_canonicalizer_parity.py
v11/: FOLLOWUPS.md  README.md  SPEC.md  config.json  preprocess_wordnet.py
v11/artifacts/: README.md  knowledge_vocab.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json
v11/bench/: Cargo.toml
v11/bench/src/: main.rs
v11/builder/: Cargo.toml
v11/builder/src/: main.rs
v11/cli/: Cargo.toml
v11/cli/src/: main.rs
v11/core/: Cargo.toml
v11/core/examples/: append_user_tokens.rs  check_call_encoding.rs
v11/core/src/: error.rs  lib.rs  pretokenize.rs  tokenizer.rs  vocab.rs
v11/corpus/code/c/: 01_basics.c  02_linked_list.c
v11/corpus/code/go/: 01_basics.go  02_goroutines.go
v11/corpus/code/java/: 01_basics.java  02_interfaces.java
v11/corpus/code/javascript/: 01_basics.js  02_templates.js
v11/corpus/code/python/: 01_basics.py  02_classes.py  03_async_io.py  04_modern.py
v11/corpus/code/rust/: 01_basics.rs  02_traits.rs  03_collections.rs
v11/corpus/code/typescript/: 01_interfaces.ts  02_generics.ts  03_react_hooks.tsx
v11/corpus/prose/geography/: canberra.txt  pacific.txt
v11/corpus/prose/history/: einstein.txt  shakespeare.txt
v11/corpus/prose/science/: chromosome.txt  electromagnetic.txt  hydrogen.txt  photosynthesis.txt  thermodynamics.txt
v11/corpus/prose/tech/: algorithm.txt  http_json.txt  javascript.txt  python.txt  rust.txt
v11/data/: wordnet_lemmas.json
v11/demos/: Cargo.toml
v11/examples/: README.md  _samples.py  compare_all.py  huggingface_autotokenizer.py  huggingface_tokenizers.py  leanness.py  python_bindings.py
v11/python/: Cargo.toml  README.md  pyproject.toml
v11/python/src/: lib.rs
v12/: README.md  candidate_grid.yaml  dormant_block_map.yaml
v12/corpus/: assemble_c8_corpus.py  build_code_corpus.py  c8_code_corpus_manifest.json  c8_manifest.json  c8_manifest_v1.json  c8_manifest_v2.json
v12/msi/: Cargo.toml
v12/msi/src/: lib.rs
v12/pins/: tok0_pins.yaml
v12/targets/: build_t_core.py  t_cell.jsonl  t_core.jsonl  t_num.jsonl  t_scale.jsonl
v12/training/: build_pure_byte_vocab.py  evaluate_candidate.py  train_byte_level_bpe.py  train_candidate.py
v12/training/tok2_runs/: bootstrap_held_out_gap.json  held_out_eval.json  held_out_eval_verified_clean.json  training_log.txt
v12/training/tok2_runs/bpe_sp_16000_v1_tcoreseed_bytefallback/: training_results.json
v12/training/tok2_runs/unigram_sp_16000_v2_tcoreseed_bytefallback/: training_results.json
v12/training/tok2_runs/unigram_sp_18000_v2_tcoreseed_bytefallback/: training_results.json
v13/: EVO-TOK-preregistration.md
