[workspace]
resolver = "2"
members = [
    "v11/core",
    "v11/builder",
    "v11/cli",
    "v11/bench",
    "v11/demos",
    "v12/msi",
]
exclude = ["v11/python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "v-tokenizers — knowledge-first tokenizer research and production line (v11 stable, v12 experimental design funnel)"
keywords = ["tokenizer", "nlp"]
categories = ["text-processing", "science::ml"]
repository = "https://github.com/chrishayuk/v-tokenizers"
homepage = "https://github.com/chrishayuk/v-tokenizers"

[workspace.dependencies]
# Core deps — small and standard
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
# bincode for fast binary vocab load
bincode = "1.3"
# Byte-order utilities for binary vocab format
byteorder = "1"
# Benchmark-only: we compare against SentencePiece + HF tokenizers.
# NOT used by v11-core at runtime — v11 is pure-Rust.
sentencepiece = { version = "0.11", default-features = false }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
