[package]
name = "v11-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance + comparison benchmarks for v11 vs ecosystem tokenizers"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "v11-bench"
path = "src/main.rs"

[dependencies]
v11-core = { path = "../core", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
walkdir.workspace = true
