[package]
name = "v11-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Assembles v11 vocabulary from config + tree-sitter AST dumps + WordNet + Wikidata"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "v11-build"
path = "src/main.rs"

[dependencies]
v11-core = { path = "../core", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
walkdir.workspace = true
