[package]
name = "v11-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust trie + rule tokenizer runtime for v11. No C++ FFI."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
byteorder.workspace = true
