[package]
name = "v11-demos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example usage of the v11 tokenizer"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "demo-basic"
path = "src/bin/basic.rs"

[[bin]]
name = "demo-code"
path = "src/bin/code.rs"

[dependencies]
v11-core = { path = "../core", version = "0.1.0" }
anyhow.workspace = true
