[package]
name = "v11-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for the v11 knowledge-first tokenizer"

[lib]
name = "v11"
crate-type = ["cdylib"]

[dependencies]
v11-core = { path = "../core", version = "0.1.0" }
pyo3 = { version = "0.22", features = ["extension-module"] }
